<resources>
    <string name="app_name">H2Go - Step in Rain</string>
    <string name="menu_icon">Menu Icon</string>
    <string name="profile_icon">Profile Icon</string>
    <string name="traffic_moderate">Traffic: Moderate</string>
    <string name="alternate_route_clear_roads">Alternate Route: Clear Roads</string>
    <string name="main_road_heavy_traffic">Main Road: Heavy Traffic</string>
    <string name="real_time_updates">Real-Time Updates</string>
    <string name="search_hint">Search hint</string>
    <string name="current_location">Current Location</string>
    <string name="zoom_in">Zoom In</string>
    <string name="zoom_out">Zoom Out</string>
    <string name="direction">Direction</string>
    <string name="openweathermap_api">902d845de7f5de16ecc661bd23826128</string>

    <string-array name="travel_modes">
        <item>driving</item>
        <item>walking</item>
        <item>cycling</item>
    </string-array>


    <string-array name="website_options">
        <item>Shohoz</item>
        <item>Bangladesh Railway</item>
        <item>Biman Bangladesh</item>
    </string-array>


</resources>