<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity"
    android:id="@+id/drawer_layout">
    <!-- Main Content -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- OSMDroid MapView -->
        <org.osmdroid.views.MapView
            android:id="@+id/mapview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none"/>

        <!-- Top Bar -->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:background="#CCFFFFFF">

            <!-- Hamburger Menu Icon -->
            <ImageView
                android:id="@+id/menu_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/baseline_account_circle_24"
                android:contentDescription="@string/menu_icon"
                android:padding="5dp" />

            <!-- Spacer -->
            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <!-- Profile/Login Icon -->
            <ImageView
                android:id="@+id/profile_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/baseline_account_circle_24"
                android:contentDescription="@string/profile_icon"
                android:padding="5dp" />
        </LinearLayout>

        <!-- Bottom Slide-Up Panel -->
        <LinearLayout
            android:id="@+id/bottom_panel"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_alignParentBottom="true"
            android:orientation="vertical"
            android:background="#FFFFFF"
            android:elevation="4dp">

            <!-- Collapsed Summary -->
            <TextView
                android:id="@+id/traffic_summary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/traffic_moderate"
                android:textSize="16sp"
                android:padding="10dp"
                android:gravity="center"
                android:background="#EEEEEE" />

            <!-- Expanded Details -->
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/real_time_updates"
                        android:textStyle="bold"
                        android:paddingBottom="5dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/main_road_heavy_traffic"
                        android:padding="5dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/alternate_route_clear_roads"
                        android:padding="5dp" />
                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </RelativeLayout>

    <!-- Navigation Drawer -->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#FFFFFF"
        app:menu="@menu/drawer_menu" />
</androidx.drawerlayout.widget.DrawerLayout>
